# gfs

./: .gitignore  Cargo.toml  README.md
crates/adapters/compute-docker/: Cargo.toml
crates/adapters/compute-docker/src/: lib.rs
crates/adapters/compute-docker/tests/: query_in_instance_it.rs
crates/adapters/compute-kubernetes/: Cargo.toml
crates/adapters/compute-kubernetes/src/: checkout.rs  lib.rs
crates/adapters/console-remote/: Cargo.toml
crates/adapters/console-remote/src/: lib.rs
crates/adapters/console-remote/tests/: console_client.rs
crates/adapters/storage-kubernetes/: Cargo.toml
crates/adapters/storage-kubernetes/src/: lib.rs
crates/applications/cli/: Cargo.toml
crates/applications/cli/src/: lib.rs
crates/applications/cli/tests/: e2e_clone_postgres.rs  e2e_clone_robustness.rs
crates/applications/mcp/src/: tools.rs
crates/extensions/gfs/: BENCHMARKS.md  Dockerfile  Dockerfile.runtime  Dockerfile.standalone  README.md  benchmark.results.tsv  benchmark.sh  chaos_test.sh  tpch_validate.sh  write_safety_test.sh
deploy/kubernetes/: README.md  namespace-rbac.yaml  openebs-zfs-gfs.yaml
docs/: console-remote.md  k3s-architecture.md  k3s-e2e-proof.md  k3s-ssm-smoketest.md
docs/rfcs/: 008-remote-clone.md
examples/benchmark-explorer/: README.md  benchmark.results.tsv
examples/benchmark-explorer/scripts/: bench.sh  lib-source.sh  run.sh
examples/benchmark-explorer/server/: package.json
examples/clone-drizzle-demo/: .env.example  .gitignore  README.md  docker-compose.yml  drizzle.config.ts  package-lock.json  package.json
examples/clone-drizzle-demo/scripts/: run-demo.sh
examples/clone-drizzle-demo/sql/: 00-extensions.sql  01-schema.sql  02-triggers.sql
examples/clone-drizzle-demo/src/: app.ts  db.ts  schema.ts  seed.ts  setup.ts
examples/clone-explorer/: .env.example  README.md  docker-compose.yml
examples/clone-explorer/scripts/: run.sh
scripts/: aws-remote-agent-e2e.sh  e2e-clone-local-docker.sh  k3s-e2e.sh  multipass-remote-agent-e2e.sh  multipass-remote-e2e.sh
(+78 files in other folders)
